# rust-srcprof

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: ignore_dirs.rs  main.rs
