[package]
name = "rust-srcprof"
version = "0.1.0"
edition = "2018"
readme = "README.md"
description = "Source profiler"
authors = ["Masahiro Sakuta"]
license = "MIT"

[features]
git = [ "git2" ]

[dependencies]
structopt = "0.3.23"
walkdir = "2"
dunce = "1.0.2"
rayon = "1.5.1"
git2 = { version = "0.13.22", optional = true }
anyhow = "1.0.13"
